--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "author": "Nico Kendrick",
   "license": "ISC",
   "devDependencies": {
-    "@testing-library/react-hooks": "^8.0.1"
+    "@testing-library/react-hooks": "^8.0.1",
+    "tailwindcss": "^3.3.2"
   }
 }
